# rinha-de-compiler

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp  source.rinha.json
include/: parser_json_to_ast.hpp
rinha-compiler/: CMakeLists.txt  rinha-compiler.hpp
rinha-compiler/include/: ast.hpp  box.hpp  compiler.hpp  function_cache.hpp  interpreter.hpp  interpreter_binary_operation.hpp  interpreter_function.hpp  memory.hpp  rinha_exception.hpp  stack.hpp  symbol.hpp  symbol_table.hpp  type.hpp  walker.hpp
rinha-compiler/src/: compiler.cpp  function_cache.cpp  interpreter.cpp  interpreter_binary_operation.cpp  interpreter_function.cpp  interpreter_walker.cpp  memory.cpp  parser_json_to_ast.cpp  rinha_exception.cpp  stack.cpp  symbol.cpp  symbol_table.cpp
src/: ast.hpp  box.hpp  main.cpp  parser_json_to_ast.cpp
tests/: CMakeLists.txt
tests/src/: interpreter_exception_test.cpp  interpreter_test.cpp  parser_json_to_ast_test.cpp
tests/test_data/: args_print.json  args_print.rinha  binary_and_string_falha.json  binary_and_string_falha.rinha  binary_gt_string_falha.json  binary_gt_string_falha.rinha  binary_gte_string_falha.json  binary_gte_string_falha.rinha  binary_lt_string_falha.json  binary_lt_string_falha.rinha  binary_lte_string_falha.json  binary_lte_string_falha.rinha  binary_op_add_number.json  binary_op_add_number_string.json  binary_op_add_string.json  binary_op_add_string_number.json  binary_op_and.json  binary_op_div_number.json  binary_op_div_string_falha.json  binary_op_div_string_falha.rinha  binary_op_eq_bool.json  binary_op_eq_number.json  binary_op_eq_string.json  binary_op_eq_string_number_falha.json  binary_op_gt_number.json  binary_op_gt_number.rinha  binary_op_gte_number.json  binary_op_lt_number.json  binary_op_lte_number.json  binary_op_mul_number.json  binary_op_neq_bool.json  binary_op_neq_number.json  binary_op_neq_number.rinha  binary_op_neq_string.json  binary_op_neq_string_number_falha.json  binary_op_neq_string_number_falha.rinha  binary_op_or.json  binary_op_rem_number.json  binary_op_sub_number.json  binary_op_sub_number.rinha  (+51 more)
tests/test_data/performance/: performance.json  performance.rinha
